--- a/behavioral-patterns/pom.xml
+++ b/behavioral-patterns/pom.xml
@@ -2,8 +2,8 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>br.com.cod3r</groupId>
-	<artifactId>behavioral-patterns-ref</artifactId>
+	<groupId>br.com.patterns</groupId>
+	<artifactId>behavioral-patterns</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	
 	<properties>
